# cob_substitute

frida_driver/: package.xml
prace_gripper_driver/: package.xml
