<package format="2">
  <name>frida_driver</name>
  <version>0.6.3</version>
  <description>frida_driver</description>
  <maintainer email="bnm@ipa.fhg.de">Benjamin Maidel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/frida_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="bnm@ipa.fhg.de">Benjamin Maidel</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
